# json-tui

./: .gitignore  CSDN_ARTICLE.md  Cargo.toml  LICENSE  README.md  test_table.json  test_tree.json
.github/workflows/: release.yml
src/: app.rs  edit.rs  file_picker.rs  json_tree.rs  main.rs  theme.rs  view_common.rs  view_table.rs  view_tree.rs
